# set-dl-capstone

./: .gitignore  README.md  demo_predictions.py  evaluate_models.py  main.py  pyproject.toml
notebooks/: drone_sound_recognition_summary.ipynb
src/: drone_pipeline.py
src/dataset/: dataset_loader.py
src/eval/: model_evaluator.py
src/predict/: predict_drone_sounds.py
src/test/: model_evaluator.test.py  setup.test.py
src/train/: train_ast.py  train_hubert.py  train_wav2vec2.py
src/visual/: visualization.py
util/: demo_predictions.py  evaluate_models.py
