[project]
name = "dl-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "evaluate>=0.4.3",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "transformers>=4.52.4",
    "accelerate>=0.26.0",
    "librosa>=0.10.0",
    "seaborn>=0.13.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
]
